<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/checkgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/phycheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/python" />

        <CheckBox
            android:id="@+id/jscheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/javascript" />

        <CheckBox
            android:id="@+id/andcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/RadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkgroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/Single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/married"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/married" />

        <RadioButton
            android:id="@+id/relation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_the_relationshp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pgbar1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/type_of_progressbar"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/pgbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ProgressBar
        android:id="@+id/pgbar2"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pgbar1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
</RelativeLayout>